--- a/scrapy-tutorial/tutorial/Makefile
+++ b/scrapy-tutorial/tutorial/Makefile
@@ -3,5 +3,10 @@
 all:
 	scrapy crawl quotes
 
+shell:
+	scrapy shell 'http://quotes.toscrape.com/page/1/'
+
 clean:
 	rm quotes-1.html quotes-2.html
+
+
