--- a/scrapy-tutorial/tutorial/Makefile
+++ b/scrapy-tutorial/tutorial/Makefile
@@ -1,6 +1,7 @@
 .PHONY: all
 
 all:
+	rm quotes.json
 	scrapy crawl quotes -o quotes.json
 
 shell:
@@ -9,4 +10,9 @@ shell:
 clean:
 	rm quotes-1.html quotes-2.html
 
+
+JL=quotes.jl
+jl:
+	rm $(JL)
+	scrapy crawl quotes -o $(JL)
 
