Add author spider

--- a/scrapy-tutorial/tutorial/Makefile
+++ b/scrapy-tutorial/tutorial/Makefile
@@ -1,20 +1,29 @@
-.PHONY: all
+.PHONY: all quotes author
 
-JSON=quotes.json
 
-all:
-	rm $(JSON)
-	scrapy crawl quotes -o $(JSON)
+RM=rm -f
+
+all: author
+
+AUTHOR_JSON=author.json
+author:
+	$(RM) $(AUTHOR_JSON)
+	scrapy crawl author -o $(AUTHOR_JSON)
+
+QUOTES_JSON=quotes.json
+quotes:
+	$(RM) $(QUOTES_JSON)
+	scrapy crawl quotes -o $(QUOTES_JSON)
 
 shell:
 	scrapy shell 'http://quotes.toscrape.com/page/1/'
 
 clean:
-	rm quotes-1.html quotes-2.html
+	$(RM) quotes-1.html quotes-2.html
 
 
-JL=quotes.jl
+QUOTES_JL=quotes.jl
 jl:
-	rm $(JL)
-	scrapy crawl quotes -o $(JL)
+	$(RM) $(QUOTES_JL)
+	scrapy crawl quotes -o $(QUOTES_JL)
 
