--- a/twstock/Makefile
+++ b/twstock/Makefile
@@ -5,9 +5,9 @@ RM=rm -f
 all: stock
 
 genspider:
-	scrapy genspider stockspider mops.twse.com.tw/mops/web/t146sb05 
+	scrapy genspider stock mops.twse.com.tw/mops/web/t146sb05
 
 STOCK_JSON=stock.json
 stock:
 	$(RM) $(STOCK_JSON)
-	scrapy crawl stockspider -o $(STOCK_JSON)
+	scrapy crawl stock -o $(STOCK_JSON)
