Add mysql pipeline for daily price

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,12 @@ hyperlink==19.0.0
 idna==2.8
 incremental==17.5.0
 lxml==4.4.1
+mysql-connector-python==8.0.18
 numpy==1.17.2
 pandas==0.25.1
+parse==1.14.0
 parsel==1.5.2
+protobuf==3.11.2
 pyasn1==0.4.7
 pyasn1-modules==0.2.6
 pycparser==2.19
